--- a/_includes/nav-recsys.html
+++ b/_includes/nav-recsys.html
@@ -1,4 +1,5 @@
 <ul class="list-group">
   <li class="list-group-item"><b>Recommender Systems - Coursera:</b></li>
   <li class="list-group-item"><a href="/study-notes/rec-sys/intro.html">Week 1 - Intro</a></li>
+  <li class="list-group-item"><a href="/study-notes/rec-sys/non-personal.html">Week 2 - Non Personalized</a></li>
 </ul>
