More machine learning resources

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,4 +1,10 @@
 <ul class="list-group">
+  <li class="list-group-item"><b>Sections:</b></li>
+  <li class="list-group-item"><a href="/resources/courses.html">Courses</a></li>
+  <li class="list-group-item"><a href="/resources/machine-learning.html">Machine Learning Resources</a></li>
+  <li class="list-group-item"><a href="/resources/study-plan">My study plan</a></li>
+</ul>
+<ul class="list-group">
   <li class="list-group-item"><b>MOOC Study Notes:</b></li>
   <li class="list-group-item"><a href="/study-notes/cloud/week1-leader-election.html">Cloud Computing</a></li>
   <li class="list-group-item"><a href="/study-notes/ml/week9/week9-anomaly-recommender.html">Machine Learning</a></li>
