--- a/_includes/nav-ml.html
+++ b/_includes/nav-ml.html
@@ -2,4 +2,5 @@
   <li class="list-group-item"><b>Machine Learning - Coursera:</b></li>
   <li class="list-group-item"><a href="/study-notes/ml/week9/week9-anomaly-recommender.html">Week 9 - Anomaly Detection</a></li>
   <li class="list-group-item"><a href="/study-notes/ml/week9/week9-recommender.html">Week 9 - Recommender Systems</a></li>
+  <li class="list-group-item"><a href="/study-notes/ml/week10/index.html">Week 10 - ML Pipeline and Ceiling Check</a></li>
 </ul>
