adapted minimal-block design

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -2,7 +2,7 @@
   <li class="list-group-item"><b>Sections:</b></li>
   <li class="list-group-item"><a href="/resources/courses.html">Courses</a></li>
   <li class="list-group-item"><a href="/resources/machine-learning.html">Machine Learning Resources</a></li>
-  <li class="list-group-item"><a href="/resources/study-plan">My study plan</a></li>
+  <li class="list-group-item"><a href="/resources/study-plan.html">My study plan</a></li>
 </ul>
 <ul class="list-group">
   <li class="list-group-item"><b>MOOC Study Notes:</b></li>
