--- a/_includes/nav-cloud.html
+++ b/_includes/nav-cloud.html
@@ -2,4 +2,5 @@
   <li class="list-group-item"><b>Cloud Computing - Coursera:</b></li>
   <li class="list-group-item"><a href="/study-notes/cloud/week1-leader-election.html">Week 1 - Leader Election</a></li>
   <li class="list-group-item"><a href="/study-notes/cloud/week2-rpc-transaction.html">Week 2 - RPC, Transactions</a></li>
+  <li class="list-group-item"><a href="/study-notes/cloud/week3-stream-distributed-fs.html">Week 3 - Stream Processing & Distributed FS</a></li>
 </ul>
