--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -10,4 +10,6 @@
   <li class="list-group-item"><a href="/study-notes/ml/week9/week9-anomaly-recommender.html">Machine Learning</a></li>
   <li class="list-group-item"><a href="/study-notes/rec-sys/intro.html">Recommender Systems</a></li>
   <li class="list-group-item"><a href="/study-notes/text-retrieval/week1.html">Text Retrieval</a></li>
+  <li class="list-group-item"><a href="/study-notes/maththink/intro.html">Mathematical Thinking</a></li>
+  <li class="list-group-item"><a href="/study-notes/writing/week3/intro.html">Writing</a></li>
 </ul>
