added reactive computing study notes

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -3,13 +3,5 @@
   <li class="list-group-item"><a href="/resources/courses.html">Courses</a></li>
   <li class="list-group-item"><a href="/resources/machine-learning.html">Machine Learning Resources</a></li>
   <li class="list-group-item"><a href="/resources/study-plan.html">My study plan</a></li>
-</ul>
-<ul class="list-group">
-  <li class="list-group-item"><b>MOOC Study Notes:</b></li>
-  <li class="list-group-item"><a href="/study-notes/cloud/week1-leader-election.html">Cloud Computing</a></li>
-  <li class="list-group-item"><a href="/study-notes/ml/week9/week9-anomaly-recommender.html">Machine Learning</a></li>
-  <li class="list-group-item"><a href="/study-notes/rec-sys/intro.html">Recommender Systems</a></li>
-  <li class="list-group-item"><a href="/study-notes/text-retrieval/week1.html">Text Retrieval</a></li>
-  <li class="list-group-item"><a href="/study-notes/maththink/intro.html">Mathematical Thinking</a></li>
-  <li class="list-group-item"><a href="/study-notes/writing/week3/intro.html">Writing</a></li>
+  <li class="list-group-item"><a href="/resources/study-notes.html">My Study notes:</a></li>
 </ul>
