--- a/_includes/nav-study-notes.html
+++ b/_includes/nav-study-notes.html
@@ -2,6 +2,9 @@
   <li class="list-group-item"><b>MOOC Study Notes:</b></li>
   <li class="list-group-item"><a href="/study-notes/cloud/week1-leader-election.html">Cloud Computing</a></li>
   <li class="list-group-item"><a href="/study-notes/ml/week9/week9-anomaly-recommender.html">Machine Learning</a></li>
+  <li class="list-group-item"><a href="/study-notes/maththink/intro.html">Mathematical Thinking</a></li>
+  <li class="list-group-item"><a href="/study-notes/reactive/week1.html">Reactive Computing</a></li>
   <li class="list-group-item"><a href="/study-notes/rec-sys/intro.html">Recommender Systems</a></li>
   <li class="list-group-item"><a href="/study-notes/text-retrieval/week1.html">Text Retrieval</a></li>
+  <li class="list-group-item"><a href="/study-notes/writing/week3/intro.html">Writing</a></li>
 </ul>
