--- a/_includes/nav-writing.html
+++ b/_includes/nav-writing.html
@@ -1,5 +1,6 @@
 <ul class="list-group">
   <li class="list-group-item"><b>Writing - Edx:</b></li>
-  <li class="list-group-item"><a href="/study-notes/writing/part3/intro.html">Intro</a></li>
-  <li class="list-group-item"><a href="/study-notes/writing/part3/creative.html">Creative Writing</a></li>
+  <li class="list-group-item"><a href="/study-notes/writing/part3/week1.html">Intro</a></li>
+  <li class="list-group-item"><a href="/study-notes/writing/part3/week2.html">Creative Writing</a></li>
+  <li class="list-group-item"><a href="/study-notes/writing/part3/week3.html">Science &amp; Technology</a></li>
 </ul>
