improve the design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,17 @@
 
     <header id="top" class="main-header">
 
-      <div class="module title color-1">
-          <img class="avatar" src="https://avatars2.githubusercontent.com/u/807807?s=460" width="80"/>
+      <div class="module title">
+          <img class="avatar" src="https://avatars2.githubusercontent.com/u/807807?s=460" width="160"/>
           <h1><a href="/">Moshe Bergman</a></h1>
           <p>Software development enthusiast</p>
       </div>
 
-      <div class="module links color-3">
-          <a href="https://github.com/mb-dev" title="Profile in Github" target="_blank">github</a>
-          <a href="https://twitter.com/MosheBergman" title="Profile in Twitter" target="_blank">twitter</a>
-          <a href="http://www.linkedin.com/in/moshebergman/" title="Profile in LinkedIn" target="_blank">LinkedIn</a>
-          <a href="{{ site.url }}/feed.xml" title="Suscribe to RSS" target="_blank">rss</a>
+      <div class="module links social-icons icon-circle">
+          <a href="http://www.linkedin.com/in/moshebergman/" title="Profile in LinkedIn"><i class="fa fa-linkedin"></i></a>
+          <a href="https://github.com/mb-dev" title="Profile in Github"><i class="fa fa-github"></i></a>
+          <a href="https://twitter.com/MosheBergman" title="Profile in Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="{{ site.url }}/feed.xml" title="Suscribe to RSS" target="_blank"><i class="fa fa-rss"></i></a>
       </div>
 
       {% include nav.html %}
