progress on apache spark

--- a/_includes/nav-study-notes.html
+++ b/_includes/nav-study-notes.html
@@ -1,5 +1,6 @@
 <ul class="list-group">
   <li class="list-group-item"><b>MOOC Study Notes:</b></li>
+  <li class="list-group-item"><a href="/study-notes/apache-spark/week1.html">Apache Spark</a></li>
   <li class="list-group-item"><a href="/study-notes/cloud/week1-leader-election.html">Cloud Computing</a></li>
   <li class="list-group-item"><a href="/study-notes/linear-algebra/week1.html">Linear Algebra</a></li>
   <li class="list-group-item"><a href="/study-notes/ml/week9/week9-anomaly-recommender.html">Machine Learning</a></li>
