finished apache spark - to algorithms

--- a/_includes/nav-apache-spark.html
+++ b/_includes/nav-apache-spark.html
@@ -1,5 +1,7 @@
 <ul class="list-group">
-  <li class="list-group-item"><b>Cloud Computing - EDX:</b></li>
+  <li class="list-group-item"><b>Big Data - Spark - EDX:</b></li>
   <li class="list-group-item"><a href="/study-notes/apache-spark/week1.html">Week 1 - Background</a></li>
-  <li class="list-group-item"><a href="/study-notes/apache-spark">Week 2 - Intro to spark</a></li>
+  <li class="list-group-item"><a href="/study-notes/apache-spark/week2.html">Week 2 - Intro to spark</a></li>
+  <li class="list-group-item"><a href="/study-notes/apache-spark/week3.html">Week 3 - Structured data</a></li>
+  <li class="list-group-item"><a href="/study-notes/apache-spark/week4.html">Week 4 - Data quality &amp; MLib</a></li>
 </ul>
