--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -3,5 +3,5 @@
   <li class="list-group-item"><a href="/resources/courses.html">Courses</a></li>
   <li class="list-group-item"><a href="/resources/machine-learning.html">Machine Learning Resources</a></li>
   <li class="list-group-item"><a href="/resources/study-plan.html">My study plan</a></li>
-  <li class="list-group-item"><a href="/resources/study-notes.html">My Study notes:</a></li>
+  <li class="list-group-item"><a href="/resources/study-notes.html">My study notes</a></li>
 </ul>
