--- a/css/main.css
+++ b/css/main.css
@@ -1,390 +1,26 @@
-/* ------------------------------------------------------------------------
--   Make browsers more friendly with padding and margin. -
--------------------------------------------------------------------------*/
-
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+.body-container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
 }
 
-
-/* ------------------------------------------------------------------------
--  Main background colors. -
--------------------------------------------------------------------------*/
-
-.color-1 { background: #2c3e50; } /* Title background */
-.color-2 { background: #34495e; } /* Description background */
-.color-3 { background: #f2f2f2; } /* Modules background */
-.color-4 { background: #7f8c8d; } /* Main menu background */
-
-
-/* ------------------------------------------------------------------------
--  The basics. -
--------------------------------------------------------------------------*/
-
-html, body {
-    background: whitesmoke;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 24px;
-    margin: 0;
+.side {
+  min-width: 220px;
+  margin-right: 20px;
+  padding: 0 0 0 20px;
 }
 
-a {
-    text-decoration: none;
-    -webkit-transition: color 0.25s ease-in, background 0.25s ease-in;
-    -moz-transition: color 0.25s ease-in, background 0.25s ease-in;
-    -o-transition: color 0.25s ease-in, background 0.25s ease-in;
-    transition: color 0.25s ease-in, background 0.25s ease-in;
+.stay-in-touch {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-p { line-height: 1.4; }
-
-.top { text-align: right; }
-.inside { padding-left: 15px; }
-
-
-/* ------------------------------------------------------------------------
--  The navigation. Main menu and article links. -
--------------------------------------------------------------------------*/
-
-nav {
-    font-size: 0.9em;
-    text-align: center;
+.main {
+  padding: 0 20px;
 }
 
-    nav a {
-        padding: 0.3em;
-        text-transform: uppercase;
-    }
-
-    nav a:nth-child(2n) { margin: 5px; }
-
-    nav a:hover {
-        border: 0;
-        color: #f2f2f2 !important;
-        text-decoration: underline;
-    }
-
-
-article p a {
-    text-decoration: underline;
-}
-
-    article p a:active {
-        color: #f2f2f2 !important;
-        background: #2c3e50;
-        border: 0;
-    }
-
-/* ------------------------------------------------------------------------
--  The header (or the left side part of the page). -
--------------------------------------------------------------------------*/
-
-.main-header {
-    float: left;
-    font-weight: 300;
-    line-height: 1.7;
-    width: 35%;
-    background: #3D4349;
-}
-
-    .main-header h1 {
-        font-weight: 300;
-        margin: 0;
-    }
-
-    .main-header a {
-        color: #f5f5f5;
-        font-family: 'Raleway', 'sans-serif';
-    }
-
-    .main-header a:focus { color: #e1e1e1; }
-
-    .main-header p {
-      margin-top: 5px;
-      color: #D3D3D3;
-    }
-
-
-.main-header .description { color: #e5e5e5; }
-.main-header .main-menu { padding: 0.1em; }
-
-.main-header .avatar {
-  background-color: #F5F5F5;
-  border-radius: 50% 50% 50% 50%;
-  margin-bottom: 15px;
-}
-
-.main-header .list-group {
-  margin: 24px;
-  font-size: 14px;
-}
-
-.main-header .list-group-item {
-  background: #f2f2f2;
-}
-
-.main-header .list-group a {
-  color: #2c3e50;
-}
-
-/* ------------------------------------------------------------------------
--  The content. -
--------------------------------------------------------------------------*/
-
-.main-content {
-    float: right;
-    padding: 0;
-    width: 65%;
-}
-
-    .main-content a { color: #2c3e50; }
-
-
-.category {
-    color: #ccc;
-    position: absolute;
-    right: 0.75em;
-    top: 0.75em;
-}
-
-
-hr {
-    border: 0;
-    background: #ccc;
-    height: 1px;
-    margin: 50px 0;
-}
-
-
-.module {
-    color: #212121;
-    margin: 24px;
-    overflow: hidden;
-    padding: 1.5em;
-    position: relative;
-    padding-bottom: 0;
-}
-
-    .main-content .module {
-        font-size: 0.8em;
-        margin-right: 1em;
-    }
-
-    .main-content .module.page {
-        font-size: 0.6em;
-    }
-
-    .main-content .module.page hr {
-        margin: 10px 0;
-    }
-
-    .module img {
-        height: auto;
-        max-width: 100%;
-    }
-
-    nav.module { padding-top: 1.5em; }
-
-/* ------------------------------------------------------------------------
--  Page content. -
--------------------------------------------------------------------------*/
-
-.main-content.page .inner {
-  font-size: 0.6em;
-  margin-right: 1em;
-
-  color: #212121;
-  margin: 24px;
-  overflow: hidden;
-  padding: 1.5em;
-  position: relative;
-
-  background: #f2f2f2;
-}
-
-/* ------------------------------------------------------------------------
--  Blockquote, code, pre. -
--------------------------------------------------------------------------*/
-
-pre, code {
-    background: #f7f7f7;
-    font-size: 0.8em;
-    line-height: 1.5em;
-    padding: 0.4em;
-}
-
-
-blockquote {
-    font-style: italic;
-    border-left: 5px solid #ccc;
-    margin: 1.5em 10px;
-    padding: 0.5em 5px;
-    quotes: "\201C""\201D""\2018""\2019";
-}
-
-    blockquote:before {
-        color: #ccc;
-        content: open-quote;
-        font-size: 4em;
-        line-height: 0.1em;
-        margin-right: 0.25em;
-        vertical-align: -0.4em;
-    }
-
-    blockquote p { display: inline; }
-
-/* ------------------------------------------------------------------------
--  Pagination. -
--------------------------------------------------------------------------*/
-
-.pagination { text-align: center; }
-    .pagination .page_number { color: #888; }
-    .pagination .nolink { color: #666; }
-
-
-/* ------------------------------------------------------------------------
--  Links (header). -
--------------------------------------------------------------------------*/
-
-.links a {
-    color: #212121;
-    text-transform: lowercase;
-}
-
-    .links a:active {
-        color: #212121;
-        text-decoration: underline;
-    }
-
-
-/* ------------------------------------------------------------------------
--  Tables -
--------------------------------------------------------------------------*/
-
-table {
-    border: 1px solid #a1a1a1;
-    border-collapse: collapse;
-    font-size: 0.8em;
-    width: 100%;
-}
-
-    table tr { border: none !important; }
-    table td,th {
-        border: 1px solid #a1a1a1;
-        padding: 3px;
-    }
-    table thead tr { background: #f2f2f2 !important; }
-    table tr:nth-child(odd) { background: #f2f2f2; }
-    table tr:nth-child(even)  { background: #e1e1e1; }
-
-
-/* ------------------------------------------------------------------------
--  Footer. -
--------------------------------------------------------------------------*/
-
-.footer {
-    clear: both;
-    color: #888;
-    font-size: 0.5em;
-    margin: 0em;
-    padding: 0.2em;
-    text-align: center;
-}
-    .footer a {
-        color: #444;
-        text-decoration: underline;
-    }
-
-    .footer p { margin-top: 2px; }
-
-
-/* ------------------------------------------------------------------------
--  Make things responsive. -
--------------------------------------------------------------------------*/
-
-@media (max-width: 850px) {
-
-    body { font-size: large; }
-
-    .main-header,
-    .main-content {
-        padding: 0.75em;
-        width: 100%;
-    }
-
-    .main-header .module { margin-left: 0; }
-    .main-content .module { margin-top: 0; }
-
-    nav { text-align: center; }
-    nav br { display: none; }
-    nav a { margin: 0 0.75em; }
-
-    .social { text-align: center; }
-    .social li { display: block; width: 100%; }
-}
-
-.module.social-icons {
-  padding-top: 0;
-  margin-top: 0;
-}
-
-/*Change icons size here*/
-.social-icons .fa {
-	font-size: 1.2em;
-}
-/*Change icons circle size and color here*/
-.social-icons .fa {
-	width: 50px;
-	height: 50px;
-	line-height: 50px;
-	text-align: center;
-	color: #FFF;
-	color: rgba(255, 255, 255, 0.8);
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-ms-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-}
-
-.social-icons.icon-circle .fa{
-	border-radius: 50%;
-}
-.social-icons.icon-rounded .fa{
-	border-radius:5px;
-}
-.social-icons.icon-flat .fa{
-	border-radius: 0;
-}
-
-.social-icons .fa:hover, .social-icons .fa:active {
-	color: #FFF;
-	-webkit-box-shadow: 1px 1px 3px #333;
-	-moz-box-shadow: 1px 1px 3px #333;
-	box-shadow: 1px 1px 3px #333;
-}
-.social-icons.icon-zoom .fa:hover, .social-icons.icon-zoom .fa:active {
- 	-webkit-transform: scale(1.1);
-	-moz-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	-o-transform: scale(1.1);
-	transform: scale(1.1);
-}
-.social-icons.icon-rotate .fa:hover, .social-icons.icon-rotate .fa:active {
-	-webkit-transform: scale(1.1) rotate(360deg);
-	-moz-transform: scale(1.1) rotate(360deg);
-	-ms-transform: scale(1.1) rotate(360deg);
-	-o-transform: scale(1.1) rotate(360deg);
-	transform: scale(1.1) rotate(360deg);
-}
-
-.social-icons .fa-facebook,.social-icons .fa-facebook-square{background-color:#3C599F;}
-.social-icons .fa-github,.social-icons .fa-github-alt,.social-icons .fa-github-square{background-color:#070709;}
-.social-icons .fa-google-plus,.social-icons .fa-google-plus-square{background-color:#CF3D2E;}
-.social-icons .fa-linkedin,.social-icons .fa-linkedin-square{background-color:#0085AE;}
-.social-icons .fa-stack-exchange{background-color:#245590;}
-.social-icons .fa-stack-overflow{background-color:#FF7300;}
-.social-icons .fa-twitter,.social-icons .fa-twitter-square{background-color:#32CCFE;}
-.social-icons .fa-rss{background-color:#FF7300;}
+.social-icons .linkedin .fa-circle {  color: #0177b5; }
+.social-icons .gitub .fa-circle {  color: #999; }
+.social-icons .twitter .fa-circle {  color: #55acee; }
+.social-icons .rss .fa-circle {  color: #fc8f55; }
